Change "value cards" to "number cards"

--- a/report/intro.tex
+++ b/report/intro.tex
@@ -26,8 +26,8 @@
 			\item Correct isolated card perspective using a Perspective Transform.
 			\item Correct card's rotation using corner intensities.
 			\item Remove white background from card and use redness in corners to determine suit colour.
-			\item Isolate rank symbol and suit symbol areas from isolated card corners.
-			\item Use blob counting after morphological erosion and closing to determine rank in the case of value cards (2 -- 10), and morphological Hit-or-Miss in the case of picture cards.
+			\item Isolate value/rank symbol and suit symbol areas from isolated card corners.
+			\item Use blob counting after morphological erosion and closing to determine value in the case of number cards (2 -- 10), and morphological Hit-or-Miss in the case of picture cards.
 			\item Present output classifications as a GUI cascade and system console textual output.
 		\end{itemize}
 
@@ -41,7 +41,7 @@
 			\centering
 			\begin{subfigure}[b]{\textwidth}
 				\centering
-				\includegraphics[width=0.8\textwidth]{chris/image1}
+				\includegraphics[width=0.6\textwidth]{chris/image1}
 				\caption{}
 			\end{subfigure}
 		\end{figure}
@@ -50,7 +50,7 @@
 			\centering
 			\begin{subfigure}[b]{\textwidth}
 				\centering
-				\includegraphics[width=0.8\textwidth]{chris/image2}
+				\includegraphics[width=0.6\textwidth]{chris/image2}
 				\caption{}
 			\end{subfigure}
 		\end{figure}
@@ -59,7 +59,7 @@
 			\centering
 			\begin{subfigure}[b]{\textwidth}
 				\centering
-				\includegraphics[width=0.8\textwidth]{chris/image3}
+				\includegraphics[width=0.6\textwidth]{chris/image3}
 				\caption{}
 			\end{subfigure}
 			\caption{A set of playing cards (a) at various orientations with a visual output of successful classifications (b) (c)}
@@ -74,7 +74,7 @@
 			\centering
 			\begin{subfigure}[b]{\textwidth}
 				\centering
-				\includegraphics[width=0.8\textwidth]{chris/image4}
+				\includegraphics[width=0.6\textwidth]{chris/image4}
 				\caption{}
 			\end{subfigure}
 		\end{figure}
@@ -83,7 +83,7 @@
 			\centering
 			\begin{subfigure}[b]{\textwidth}
 				\centering
-				\includegraphics[width=0.8\textwidth]{chris/image5}
+				\includegraphics[width=0.6\textwidth]{chris/image5}
 				\caption{}
 			\end{subfigure}
 			\caption{An example of miss-classification (b) due to significant lighting distortion (a)}
