--- a/report/numdet.tex
+++ b/report/numdet.tex
@@ -1,6 +1,6 @@
 		The rank of a card is determined by the numerical value in the top-left and bottom-right corners, and in the case of any card that is not a picture card, the quantity of suit symbols in the centre of the card itself. Thus, cards 2 through 10 are scored by their numerical value by the software implementation using the quantity of suit symbols.
 
-		\subsubsection{Value cards}
+		\subsubsection{Number cards}
 			The first step in this classification stage is to convert the card image to a binary segmented form using simple thresholding, then by flood-filling the top-left and bottom-right corners, whose features are not used for value detection, as shown below:
 
 			\begin{lstlisting}
