Add Yousef's Review and Implementation sections and more screenshots

--- a/report/numdet.tex
+++ b/report/numdet.tex
@@ -42,7 +42,7 @@ temp = binary_closing(temp, 10);
 			After this, the remaining blobs are counted and filled, and is equal to the value of the card itself for the sample deck used for evaluation.
 
 		\subsubsection{Picture cards}
-			In the case of picture cards (except for the case of an Ace), there is to relationship between the number of blobs in the centre of the card and its value, such as a King. To get around this, the presence of a picture card is determined by the presence of an additional contour inside the isolated card, i.e.: there is a rectangle within the card rectangle, as illustrated below:
+			In the case of picture cards (except for the case of an Ace), there is no relationship between the number of blobs in the centre of the card and its value, such as a King. To get around this, the presence of a picture card is determined by the presence of an additional contour inside the isolated card \secref{sec:typedet}, i.e.: there is a rectangle within the card rectangle, as illustrated below:
 
 			\begin{figure}[H]
 				\centering
