--- a/report/report.bib
+++ b/report/report.bib
@@ -44,3 +44,52 @@
 	url = {http://bme.med.upatras.gr/improc/Morphological%20operators.htm},
 	urldate = {2014-04-24}
 }
+@article{duda1972use,
+	title={Use of the Hough transformation to detect lines and curves in pictures},
+	author={Duda, Richard O and Hart, Peter E},
+	journal={Communications of the ACM},
+	volume={15},
+	number={1},
+	pages={11--15},
+	year={1972},
+	publisher={ACM}
+}
+@article{pizer1987adaptive,
+	title={Adaptive histogram equalization and its variations},
+	author={Pizer, Stephen M and Amburn, E Philip and Austin, John D and Cromartie, Robert and Geselowitz, Ari and Greer, Trey and ter Haar Romeny, Bart and Zimmerman, John B and Zuiderveld, Karel},
+	journal={Computer vision, graphics, and image processing},
+	volume={39},
+	number={3},
+	pages={355--368},
+	year={1987},
+	publisher={Elsevier}
+}
+@article{ramer1972iterative,
+	title={An iterative procedure for the polygonal approximation of plane curves},
+	author={Ramer, Urs},
+	journal={Computer Graphics and Image Processing},
+	volume={1},
+	number={3},
+	pages={244--256},
+	year={1972},
+	publisher={Elsevier}
+}
+@article{douglas1973algorithms,
+	title={Algorithms for the reduction of the number of points required to represent a digitized line or its caricature},
+	author={Douglas, David H and Peucker, Thomas K},
+	journal={Cartographica: The International Journal for Geographic Information and Geovisualization},
+	volume={10},
+	number={2},
+	pages={112--122},
+	year={1973},
+	publisher={UT Press}
+}
+@article{canny1986computational,
+	title={A computational approach to edge detection},
+	author={Canny, John},
+	journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+	number={6},
+	pages={679--698},
+	year={1986},
+	publisher={IEEE}
+}
