Integrate Chris' 3.1 and 4.2

--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,4 +1,5 @@
 	\subsection{Task Assigned}
+		\label{sec:task}
 		For the EE4H Computer Vision assignment the task set is to examine images of classic playing cards and develop an automated software solution for classifying their suit and rank without human intervention. To do this, an understanding of the existing techniques available to use must be gained, a software solution developed that meets the task requirements and that software must be evaluated and tested to ensure it is working correctly. 
 
 		Therefore the task can be split into the following stages:
